# langbridge

./: .gitignore  AGENT.md  AGENTS.md  Dockerfile.host  Dockerfile.worker  GEMINI.md  LICENSE  README.md  alembic.ini  docker-compose.customer-runtime.yml  docker-compose.sales.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-docker-images.yml  publish-runtime-packages.yml
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  project-guidance.md
.specify/templates/: constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
alembic/: env.py
alembic/versions/: 141a6f030917_initial_schema.py  1a8ec5672a11_add_dashboard_refresh_snapshot_columns.py  (+7 more)
client/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
docker/: Dockerfile  Dockerfile.runtime_ui
docs/: README.md  api.md  architecture.md  bi-studio.md  datasets.md  development.md  federated-query-engine.md  semantic-model.md
experimental/: __init__.py  vector_search_debug.py
langbridge/: .dockerignore  .gitignore  DockerFile  Dockerfile  Dockerfile.api  Dockerfile.gateway  Dockerfile.host  Dockerfile.migrate  Dockerfile.worker  __init__.py  __main__.py  config.py  deps.py  example.env  hosting.py  main.py  requirements-dev.txt  requirements-gateway.txt  requirements-migrate.txt  requirements-worker.txt  requirements.txt
langbridge-connectors/: README.md
langbridge-connectors/langbridge-connector-asana/: README.md  pyproject.toml
langbridge-connectors/langbridge-connector-asana/examples/: dataset_selection_examples.yaml
langbridge-connectors/langbridge-connector-asana/src/langbridge_connector_asana/: __init__.py  config.py  connector.py  plugin.py
langbridge-connectors/langbridge-connector-asana/src/langbridge_connector_asana/manifests/: asana.yaml
langbridge-connectors/langbridge-connector-google-analytics/: README.md  pyproject.toml
langbridge-connectors/langbridge-connector-google-analytics/src/langbridge_connector_google_analytics/: __init__.py  config.py  connector.py  plugin.py
langbridge-connectors/langbridge-connector-hubspot/: README.md  pyproject.toml
langbridge-connectors/langbridge-connector-hubspot/examples/: dataset_selection_examples.yaml
langbridge-connectors/langbridge-connector-hubspot/src/langbridge_connector_hubspot/: __init__.py  config.py  connector.py  plugin.py
langbridge-connectors/langbridge-connector-hubspot/src/langbridge_connector_hubspot/manifests/: hubspot.yaml
langbridge-connectors/langbridge-connector-salesforce/: README.md  pyproject.toml
langbridge-connectors/langbridge-connector-salesforce/src/langbridge_connector_salesforce/: __init__.py  config.py  connector.py  plugin.py
langbridge-connectors/langbridge-connector-shopify/: README.md  pyproject.toml
langbridge-connectors/langbridge-connector-shopify/examples/: dataset_selection_examples.yaml
langbridge-connectors/langbridge-connector-shopify/src/langbridge_connector_shopify/: __init__.py  config.py  connector.py  examples.py  plugin.py
langbridge-connectors/langbridge-connector-shopify/src/langbridge_connector_shopify/manifests/: shopify.yaml
langbridge-connectors/langbridge-connector-snowflake/: __init__.py  config.py  connector.py  metadata.py  pyproject.toml
langbridge-connectors/langbridge-connector-snowflake/src/langbridge_connector_snowflake/: connector.py  metadata.py
langbridge/apps/gateway/: pyproject.toml
langbridge/apps/gateway/langbridge_gateway/: app.py  config.py  main.py  mysql_proxy.py  postgres_proxy.py  routing.py  sqlite_proxy.py  sqlserver_proxy.py  streams.py
langbridge/apps/gateway/langbridge_gateway/auth/: __init__.py  secrets_provider.py
langbridge/apps/gateway/langbridge_gateway/trino_client/: __init__.py  client.py
monitoring/: prometheus.yml  promtail-config.yml
proxy/: Dockerfile  __init__.py  app.py  config.py  mysql_proxy.py  postgres_proxy.py  routing.py  sqlserver_proxy.py
requirements/: runtime.txt
scripts/: check_runtime_boundary.py  generate_api_collections.py  wrap_semantic_tables_into_datasets.py
tests/: conftest.py
(+1155 files in other folders)
