[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langbridge-connector-google-analytics"
version = "0.1.0"
description = "Google Analytics connector for Langbridge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["langbridge"]

[project.entry-points."langbridge.connectors"]
google_analytics = "langbridge_connector_google_analytics:get_connector_plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
