[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langbridge-connector-hubspot"
version = "0.1.0"
description = "Declarative HubSpot CRM connector for Langbridge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["langbridge", "PyYAML>=6.0"]

[project.entry-points."langbridge.connectors"]
hubspot = "langbridge_connector_hubspot:get_connector_plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
langbridge_connector_hubspot = ["manifests/*.yaml"]
