[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langbridge-connector-salesforce"
version = "0.1.0"
description = "Salesforce connector for Langbridge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["langbridge"]

[project.entry-points."langbridge.connectors"]
salesforce = "langbridge_connector_salesforce:get_connector_plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
