[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langbridge-connectors-snowflake"
version = "0.1.0"
dependencies = ["langbridge"]

[project.entry-points."langbridge.plugin.connectors"]
snowflake = "langbridge_connectors_snowflake.snowflake_connector:SnowflakeConnector"