[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langbridge-gateway"
version = "0.1.0"
description = "Langbridge SQL gateway"
requires-python = ">=3.10"
dependencies = [
  "langbridge-common @ file:../../packages/common",
  "langbridge-messaging @ file:../../packages/messaging",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["langbridge_gateway*"]
